--- a/application/pom.xml
+++ b/application/pom.xml
@@ -5,7 +5,7 @@
    <artifactId>cheetah</artifactId>
    <packaging>war</packaging>
    <version>0.0.3-SNAPSHOT</version>
-   <name>Mifos - Cheetah</name>
+   <name>Mifos - Cheetah application</name>
    <url>http://www.mifos.org</url>
 
    <properties>
