Completed the UserCanDesburseBasicLoan acceptance test. Moved the test-classes directory for building acceptance tests under the target directory.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13895 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -303,7 +303,7 @@
       <scriptSourceDirectory>${modules.root.dir}/testing/src/main/scripts</scriptSourceDirectory>
       <testSourceDirectory>${modules.root.dir}/testing/src/test/java</testSourceDirectory>
       <outputDirectory>${modules.root.dir}/testing/target/cheetah-testing/WEB-INF/classes</outputDirectory>
-      <testOutputDirectory>${modules.root.dir}/testing/test-classes</testOutputDirectory>
+      <testOutputDirectory>${modules.root.dir}/testing/target/test-classes</testOutputDirectory>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
