1. Implemented security access controls for loan-product CRUD operations. 2. Added left navigation bar to loan-product pages.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13903 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -227,6 +227,11 @@
           <artifactId>hibernate</artifactId>
           <version>3.2.6.ga</version>
       </dependency>
+	  <dependency>
+		  <groupId>org.springframework.security</groupId>
+		  <artifactId>spring-security-taglibs</artifactId>
+		  <version>2.0.2</version>
+	  </dependency>    
    </dependencies>
    <build>
       <finalName>mifos</finalName>
