--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
              <groupId>org.dbunit</groupId>
              <artifactId>dbunit</artifactId>
              <version>2.3.0</version>
-         </dependency>   
+         </dependency>
+         <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>2.0.2</version>
+		 </dependency>    
       </dependencies>
    </dependencyManagement>
    <build>
