sql:execute now working from module and from top level build.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13907 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -5,7 +5,7 @@
    <artifactId>cheetah</artifactId>
    <packaging>war</packaging>
    <version>0.0.3-SNAPSHOT</version>
-   <name>Mifos - Cheetah application</name>
+   <name>Mifos - Cheetah Application</name>
    <url>http://www.mifos.org</url>
 
    <properties>
@@ -242,6 +242,10 @@
       <outputDirectory>${project.build.directory}/mifos/WEB-INF/classes</outputDirectory>
       <testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
       <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+         </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
