--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
    <artifactId>cheetah-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.0.3-SNAPSHOT</version>
-   <name>Mifos - Cheetah parent</name>
+   <name>Mifos - Cheetah Parent</name>
    <url>http://www.mifos.org</url>
     
    <modules>
@@ -18,6 +18,48 @@
       <modules.root.dir>${basedir}</modules.root.dir>
       <database.properties.file>${modules.root.dir}/application/src/main/resources/jdbc.properties</database.properties.file>
    </properties>
+   
+   <repositories>
+      <repository>
+         <id>spring-snapshot</id>
+         <name>Spring Portfolio Milestone Repository</name>
+         <url>http://s3.amazonaws.com/maven.springframework.org/milestone</url>
+      </repository>
+      <repository>
+         <id>maven2-repository.dev.java.net</id>
+         <name>Java.net Repository for Maven</name>
+         <url>http://download.java.net/maven/2/</url>
+         <layout>default</layout>
+      </repository>
+      <repository>
+         <id>maven2-jboss-repository</id>
+         <name>JBoss maven2 repository</name>
+         <url>http://repository.jboss.com/maven2</url>
+         <layout>default</layout>
+      </repository>
+      <repository>
+         <id>ibiblio-maven2-repository</id>
+         <name>Ibiblio maven2 repository</name>
+         <url>http://mirrors.ibiblio.org/pub/mirrors/maven2/</url>
+         <layout>default</layout>
+      </repository>
+   </repositories>
+   <pluginRepositories>
+      <pluginRepository>
+         <id>Codehaus Snapshots</id>
+         <url>http://snapshots.repository.codehaus.org/</url>
+         <snapshots>
+            <enabled>true</enabled>
+         </snapshots>
+         <releases>
+            <enabled>false</enabled>
+         </releases>
+      </pluginRepository>
+      <pluginRepository>
+         <id>Codehaus Repository</id>
+         <url>http://repository.codehaus.org/</url>
+      </pluginRepository>
+   </pluginRepositories>
    
    <dependencyManagement>
       <dependencies>
@@ -53,6 +95,7 @@
 		 </dependency>    
       </dependencies>
    </dependencyManagement>
+   
    <build>
       <resources>
          <resource>
@@ -65,33 +108,11 @@
          </resource>
       </resources>
       <pluginManagement>
-         <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-help-plugin</artifactId>
-            </plugin>
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>properties-maven-plugin</artifactId>
-              <version>1.0-SNAPSHOT</version>
-              <executions>
-                <execution>
-                  <phase>initialize</phase>
-                  <goals>
-                    <goal>read-project-properties</goal>
-                  </goals>
-                  <configuration>
-                    <files>
-                      <file>${database.properties.file}</file>
-                    </files>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
+        <plugins>
             <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>sql-maven-plugin</artifactId>
-               <version>1.1</version>
+               <version>1.2</version>
                <dependencies>
                   <dependency>
                      <groupId>mysql</groupId>
@@ -121,9 +142,63 @@
                    </goals>
                  </execution>
                </executions>
-            </plugin>      
-         </plugins>
-      </pluginManagement>
+            </plugin>                 
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-help-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>properties-maven-plugin</artifactId>
+              <version>1.0-SNAPSHOT</version>
+              <executions>
+                <execution>
+                  <phase>initialize</phase>
+                  <goals>
+                    <goal>read-project-properties</goal>
+                  </goals>
+                  <configuration>
+                    <files>
+                      <file>${database.properties.file}</file>
+                    </files>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>  
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+               <debug>true</debug>
+               <source>1.6</source>
+               <target>1.6</target>
+            </configuration>
+         </plugin>
+         <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-dependency-plugin</artifactId>
+           <version>2.0</version>
+         </plugin>
+         <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>properties-maven-plugin</artifactId>
+              <version>1.0-SNAPSHOT</version>
+              <executions>
+                <execution>
+                  <phase>initialize</phase>
+                  <goals>
+                    <goal>read-project-properties</goal>
+                  </goals>
+                  <configuration>
+                    <files>
+                      <file>${database.properties.file}</file>
+                    </files>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
     </build>
 
 </project>
