--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -232,7 +232,13 @@
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>sql-maven-plugin</artifactId>
-            <version>1.1</version>
+            <dependencies>
+               <dependency>
+                  <groupId>mysql</groupId>
+                  <artifactId>mysql-connector-java</artifactId>
+                  <version>5.1.6</version>
+               </dependency>
+            </dependencies>
             <executions>
               <execution>
                 <phase>integration-test</phase>
