Partial progress on Story 662 - Admin User can create new user.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13940 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -18,3 +18,6 @@ LoanDto.loanProductId[not.null]=Please enter a loan product id
 LoanDto.clientId[not.null]=Please enter a client id
 LoanDto.interestRateIsTooHigh=Please enter an interest rate less than or equal to the maximum of {0} allowed by the loan product.
 LoanDto.interestRateIsTooLow=Please enter an interest rate greater than or equal to the minimum of {0} allowed by loan product.
+UserDto.userId[not.blank]=Please enter a user id.
+UserDto.password[not.blank]=Please enter a password.
+UserDto.confirmPassword[expression]=Passwords did not match.
