Partial progress on story 662 - Admin user can create a new user
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13945 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -21,3 +21,6 @@ LoanDto.interestRateIsTooLow=Please enter an interest rate greater than or equal
 UserDto.userId[not.blank]=Please enter a user id.
 UserDto.password[not.blank]=Please enter a password.
 UserDto.confirmPassword[expression]=Passwords did not match.
+User.userId.not.blank=User ID must not be blank.
+User.password.not.blank=Password must not be blank
+User.roles.not.empty=User must be assigned at least one security role
