fixed problem with pom.xml and process-resources that resulted in a database called '$'; deleteLoanProduct now works for several acceptance test cases.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13966 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -241,7 +241,12 @@
       <testSourceDirectory>${modules.root.dir}/application/src/test/java</testSourceDirectory>
       <outputDirectory>${project.build.directory}/mifos/WEB-INF/classes</outputDirectory>
       <testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
+
       <plugins>
+        <plugin>
+           <groupId>org.codehaus.mojo</groupId>
+           <artifactId>properties-maven-plugin</artifactId>
+        </plugin>  
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>sql-maven-plugin</artifactId>
