--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -149,6 +149,14 @@
          </properties>
          <build>
             <plugins>
+              <plugin>
+                 <groupId>org.codehaus.mojo</groupId>
+                 <artifactId>properties-maven-plugin</artifactId>
+              </plugin>  
+              <plugin>
+                  <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>sql-maven-plugin</artifactId>
+               </plugin>
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
