fixed problem with sql:execute not processing resources; updated loan and loanProduct creation sql
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13968 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -239,8 +239,8 @@
       <sourceDirectory>${modules.root.dir}/application/src/main/java</sourceDirectory>
       <scriptSourceDirectory>${modules.root.dir}/application/src/main/scripts</scriptSourceDirectory>
       <testSourceDirectory>${modules.root.dir}/application/src/test/java</testSourceDirectory>
-      <outputDirectory>${project.build.directory}/mifos/WEB-INF/classes</outputDirectory>
-      <testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
+      <outputDirectory>target/mifos/WEB-INF/classes</outputDirectory>
+      <testOutputDirectory>target/test-classes</testOutputDirectory>
 
       <plugins>
         <plugin>
