--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -310,8 +310,8 @@
       <sourceDirectory>${modules.root.dir}/testing/src/main/java</sourceDirectory>
       <scriptSourceDirectory>${modules.root.dir}/testing/src/main/scripts</scriptSourceDirectory>
       <testSourceDirectory>${modules.root.dir}/testing/src/test/java</testSourceDirectory>
-      <outputDirectory>${modules.root.dir}/testing/target/cheetah-testing/WEB-INF/classes</outputDirectory>
-      <testOutputDirectory>${modules.root.dir}/testing/target/test-classes</testOutputDirectory>
+      <outputDirectory>target/cheetah-testing/WEB-INF/classes</outputDirectory>
+      <testOutputDirectory>target/test-classes</testOutputDirectory>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
