restoring client and loan table generation sql - they are needed after all.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13995 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -313,6 +313,14 @@
       <outputDirectory>target/cheetah-testing/WEB-INF/classes</outputDirectory>
       <testOutputDirectory>target/test-classes</testOutputDirectory>
       <plugins>
+        <plugin>
+           <groupId>org.codehaus.mojo</groupId>
+           <artifactId>properties-maven-plugin</artifactId>
+        </plugin>  
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+         </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
