--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,8 @@
                   <autocommit>true</autocommit>
                   <srcFiles>
                      <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
+                     <srcFile>${project.build.outputDirectory}/sql/create_clients.sql</srcFile>
+                     <srcFile>${project.build.outputDirectory}/sql/create_loans.sql</srcFile>
                      <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
                      <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
                   </srcFiles>
