--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,8 @@
                      <srcFile>${project.build.outputDirectory}/sql/create_loans.sql</srcFile>
                      <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
                      <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
+                     <srcFile>${project.build.outputDirectory}/sql/create_office_level.sql</srcFile>                     
+                     <srcFile>${project.build.outputDirectory}/sql/office_level_data.sql</srcFile>
                   </srcFiles>
                </configuration>
                <executions>
