moved sql script execution to from integration test phase to pre-integration-test phase; removed create table sql scripts; added ping.ftl page (does not hit database, though); added tests for ping and appInfo; initial add of UserCanViewListOfGroupsStoryTest
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14012 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -388,24 +388,6 @@
             </executions>
          </plugin>
          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>selenium-maven-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>start-selenium</id>
-                  <phase>pre-integration-test</phase>
-                  <goals>
-                     <goal>start-server</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <background>${selenium.background}</background>
-               <port>${selenium.port}</port>
-               <logOutput>${selenium.log.output}</logOutput>
-            </configuration>
-         </plugin>
-         <plugin>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-maven2-plugin</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -454,10 +436,28 @@
                         <properties>
                            <context>mifos</context>
                         </properties>
-                        <pingURL>http://localhost:${servlet.port}/mifos</pingURL>
+                        <pingURL>http://localhost:${servlet.port}/mifos/ping.ftl</pingURL>
                      </deployable>
                   </deployables>
                </configuration>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>selenium-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>start-selenium</id>
+                  <phase>pre-integration-test</phase>
+                  <goals>
+                     <goal>start-server</goal>
+                  </goals>
+               </execution>
+            </executions>
+            <configuration>
+               <background>${selenium.background}</background>
+               <port>${selenium.port}</port>
+               <logOutput>${selenium.log.output}</logOutput>
             </configuration>
          </plugin>
       </plugins>
