--- a/pom.xml
+++ b/pom.xml
@@ -128,8 +128,6 @@
                   <autocommit>true</autocommit>
                   <srcFiles>
                      <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
-                     <srcFile>${project.build.outputDirectory}/sql/create_clients.sql</srcFile>
-                     <srcFile>${project.build.outputDirectory}/sql/create_loans.sql</srcFile>
                      <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
                      <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
                      <srcFile>${project.build.outputDirectory}/sql/create_office_level.sql</srcFile>                     
@@ -138,7 +136,7 @@
                </configuration>
                <executions>
                  <execution>
-                   <phase>integration-test</phase>
+                   <phase>pre-integration-test</phase>
                    <goals>
                      <goal>execute</goal>
                    </goals>
