removing create_office_level.sql; set integration-tests to use datasets to insert needed data; updated SimpleDataSet to optionally use DbUnit column sensing; removed some empty javadoc comments
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14020 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -271,6 +271,7 @@
             </configuration>
             <executions>
                <execution>
+                  <id>integration-test</id>
                   <phase>integration-test</phase>
                   <goals>
                      <goal>test</goal>
