--- a/pom.xml
+++ b/pom.xml
@@ -126,20 +126,21 @@
                   <username>root</username>
                   <password>mysql</password>
                   <autocommit>true</autocommit>
-                  <srcFiles>
-                     <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
-                     <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
-                     <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
-                     <srcFile>${project.build.outputDirectory}/sql/create_office_level.sql</srcFile>                     
-                     <srcFile>${project.build.outputDirectory}/sql/office_level_data.sql</srcFile>
-                  </srcFiles>
                </configuration>
                <executions>
                  <execution>
+                   <id>pre-application-startup</id>
                    <phase>pre-integration-test</phase>
                    <goals>
                      <goal>execute</goal>
                    </goals>
+                   <configuration>
+                     <srcFiles>
+                        <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
+                        <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
+                        <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
+                     </srcFiles>
+                   </configuration>
                  </execution>
                </executions>
             </plugin>                 
