--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -320,6 +320,21 @@
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>sql-maven-plugin</artifactId>
+            <executions>
+                 <execution>
+                   <id>post-application-startup</id>
+                   <phase>integration-test</phase>
+                   <goals>
+                     <goal>execute</goal>
+                   </goals>
+                   <configuration>
+                     <srcFiles>
+                        <srcFile>${project.build.outputDirectory}/sql/use_database.sql</srcFile>
+                        <srcFile>${project.build.outputDirectory}/sql/office_level_data.sql</srcFile>
+                     </srcFiles>
+                   </configuration>
+                 </execution>
+            </executions>            
          </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
