Completing Story 662 -- Admin User can create a new user. [with default user role]
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14023 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -18,9 +18,13 @@ LoanDto.loanProductId[not.null]=Please enter a loan product id
 LoanDto.clientId[not.null]=Please enter a client id
 LoanDto.interestRateIsTooHigh=Please enter an interest rate less than or equal to the maximum of {0} allowed by the loan product.
 LoanDto.interestRateIsTooLow=Please enter an interest rate greater than or equal to the minimum of {0} allowed by loan product.
-UserDto.userId[not.blank]=Please enter a user id.
-UserDto.password[not.blank]=Please enter a password.
-UserDto.confirmPassword[expression]=Passwords did not match.
+UserFormBean.userId[not.blank]=Please enter a user id.
+UserFormBean.password[not.blank]=Please enter a password.
+UserFormBean.confirmPassword[not.blank]=Please confirm the password.
+UserFormBean.confirmPassword[expression]=Passwords did not match.
+UserFormBean.userId[max.length]=User id must be at most {1} characters,
+UserFormBean.password[max.length]=Password must be {1} characters or less
 User.userId.not.blank=User ID must not be blank.
 User.password.not.blank=Password must not be blank
 User.roles.not.empty=User must be assigned at least one security role
+User.userId.[not.exist]="User id already exists."
