making UserCanViewListOfGroupsStoryTest verify page; moved viewGroups.ftl page out of subdirectory; changed client table names and column names to try out the all caps database naming scheme
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14026 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -26,6 +26,7 @@
          </activation>
          <properties>
             <database.properties.file>${modules.root.dir}/resources/deploy-build/jdbc.local.properties</database.properties.file>
+            <insert-sql-data>true</insert-sql-data>
          </properties>
       </profile>
       <profile>
