--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,43 @@
    <properties>
       <modules.root.dir>${basedir}</modules.root.dir>
       <database.properties.file>${modules.root.dir}/application/src/main/resources/jdbc.properties</database.properties.file>
+      <insert-sql-data>false</insert-sql-data>
    </properties>
+   
+   <profiles>
+     <profile>
+         <id>insert-data</id>
+         <activation>
+            <property>
+               <name>insert-sql-data</name>
+               <value>true</value>
+            </property>
+         </activation>
+         <build>
+            <plugins>
+              <plugin>
+               <groupId>org.codehaus.mojo</groupId>
+               <artifactId>sql-maven-plugin</artifactId>
+               <executions>
+                    <execution>
+                      <id>post-application-startup</id>
+                      <phase>integration-test</phase>
+                      <goals>
+                        <goal>execute</goal>
+                      </goals>
+                      <configuration>
+                        <srcFiles>
+                           <srcFile>${project.build.outputDirectory}/sql/use_database.sql</srcFile>
+                           <srcFile>${project.build.outputDirectory}/sql/office_level_data.sql</srcFile>
+                        </srcFiles>
+                      </configuration>
+                    </execution>
+               </executions>            
+             </plugin>
+           </plugins>
+        </build>
+      </profile>
+    </profiles>
    
    <repositories>
       <repository>
