Additions to Story 662 - Admin user can create a new user 1. Corrected acceptance tests and added them to the acceptance test suites 2. Enabled the admin user to assign security roles to the new user 3. Removed unused code from DatabaseTestUtils
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14031 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -19,8 +19,8 @@ LoanProductFormBean.minInterestRate[min]=Minimum interest rate must be 0 or more
 LoanProductFormBean.minInterestRate[not.null]=Please enter the minimum annual interest rate.
 LoanProductFormBean.shortName[not.blank]=Please enter a short name.
 User.password.not.blank=Password must not be blank
-User.roles.not.empty=User must be assigned at least one security role
-User.userId.[not.exist]="User id already exists."
+User.roles[not.empty]=User must be assigned at least one security role
+User.userId.[not.exist]=User id already exists.
 User.userId.not.blank=User ID must not be blank.
 UserFormBean.confirmPassword[expression]=Passwords did not match.
 UserFormBean.confirmPassword[not.blank]=Please confirm the password.
