Completed story 987: A branch office and a head office are automatically created within Mifos * Finished StandardOfficeService implementation * Fixed up the office display ftl page * Added office_data.sql script to populate DB with default offices
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14040 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
                         <srcFiles>
                            <srcFile>${project.build.outputDirectory}/sql/use_database.sql</srcFile>
                            <srcFile>${project.build.outputDirectory}/sql/office_level_data.sql</srcFile>
+                           <srcFile>${project.build.outputDirectory}/sql/office_data.sql</srcFile>
                         </srcFiles>
                       </configuration>
                     </execution>
