Turned on PMD checking is test hierarchy and fixed resulting PMD errors. Fixed CPD (copy paste detector) errors flagged in test hierarchy.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14053 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -218,6 +218,7 @@
                <rulesets>
                   <ruleset>${basedir}/../.ruleset</ruleset>
                </rulesets>
+               <includeTests>true</includeTests>               
             </configuration>
             <executions>
                <execution>
@@ -263,6 +264,7 @@
                <linkXref>true</linkXref>
                <sourceEncoding>utf-8</sourceEncoding>
                <targetJdk>1.6</targetJdk>
+               <includeTests>true</includeTests>               
                <rulesets>
                   <ruleset>${basedir}/../.ruleset</ruleset>
                </rulesets>
