--- a/application/pom.xml
+++ b/application/pom.xml
@@ -304,6 +304,7 @@
                <rulesets>
                   <ruleset>${modules.root.dir}/.ruleset</ruleset>
                </rulesets>
+               <includeTests>true</includeTests>
             </configuration>
             <executions>
                <execution>
@@ -338,6 +339,7 @@
                <linkXref>true</linkXref>
                <sourceEncoding>utf-8</sourceEncoding>
                <targetJdk>1.6</targetJdk>
+               <includeTests>true</includeTests>               
                <rulesets>
                   <ruleset>${modules.root.dir}/.ruleset</ruleset>
                </rulesets>
